# classification

./: .gitignore  README.md  pyproject.toml
notebooks/: Dataset.ipynb  Hybrid.ipynb  Models.ipynb  Overview.ipynb  Preguntas.ipynb  Training.ipynb  YOLO.ipynb
notebooks/lightning_logs/version_37/: metrics.csv
notebooks/lightning_logs/version_38/: metrics.csv
notebooks/lightning_logs/version_39/: metrics.csv
notebooks/lightning_logs/version_40/: metrics.csv
results/: alexnet_full.json  alexnet_subset_05.json  alexnet_subset_10.json  alexnet_subset_25.json  densenet121_full.json  densenet121_subset_05.json  densenet121_subset_10.json  densenet121_subset_25.json  efficientnet_b0_full.json  efficientnet_b0_subset_05.json  efficientnet_b0_subset_10.json  efficientnet_b0_subset_25.json  efficientnet_v2_s_full.json  efficientnet_v2_s_subset_05.json  efficientnet_v2_s_subset_10.json  efficientnet_v2_s_subset_25.json  hybrid_A_full.json  hybrid_A_subset_05.json  hybrid_A_subset_10.json  hybrid_A_subset_25.json  hybrid_B_full.json  hybrid_B_subset_05.json  hybrid_B_subset_10.json  hybrid_B_subset_25.json  hybrid_C_full.json  hybrid_C_subset_05.json  hybrid_C_subset_10.json  hybrid_C_subset_25.json  resnet50_full.json  resnet50_subset_05.json  resnet50_subset_10.json  resnet50_subset_25.json  vgg11_bn_full.json  vgg11_bn_subset_05.json  vgg11_bn_subset_10.json  vgg11_bn_subset_25.json  vit_b_16_full.json  vit_b_16_subset_05.json  vit_b_16_subset_10.json  vit_b_16_subset_25.json  (+8 more)
scripts/: prepare_data.py  train.py  yolo_train.py
(+8 files in other folders)
