[project]
name = "classification"
version = "0.1.0"
description = "Entorno de desarrollo para modelos de IA para clasificación de imágenes"
requires-python = ">=3.12"
dependencies = [
    "ultralytics",  # Para YOLO
    "transformers",
    "datasets",
    "matplotlib",
    "jupyterlab",
    "notebook",
    "ipywidgets",
]

[project.optional-dependencies]
cpu = ["torch==2.6.0+cpu", "torchvision==0.21.0+cpu", "torchaudio==2.6.0+cpu"]
cu126 = ["torch", "torchvision", "torchaudio"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu126" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
